# pro_order

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .python-version  README.md  celery_app.py  console.sql  locustfile.py  manage.py  memo.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/COMMIT_TEMPLATE/: commit_template.txt
.github/workflows/: CICD.yaml  CICD.yml  ci.yml
apps/: __init__.py  conftest.py
apps/analytics/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/chat_message/: __init__.py  admin.py  apps.py  consumers.py  models.py  serializers.py  tests.py  throttles.py  urls.py  views.py
apps/chat_room/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/chat_room/migrations/: 0001_initial.py
apps/cs_post/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/cs_reply/: __init__.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/dashboard_summary/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/faq/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/idol/: apps.py  docs.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/idol/migrations/: 0001_initial.py
apps/image/: image_utils.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
apps/image/migrations/: 0001_initial.py
apps/like/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/logs/: models.py  serializers.py  urls.py  views.py
apps/notice/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/notification/: __init__.py  admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  test_tasks.py  tests.py  urls.py  urls_push.py  views.py  views_push.py
apps/order/: apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  tests.py  throttles.py  urls.py  views.py
apps/order_status_log/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/order_status_log/migrations/: 0001_initial.py
apps/preset_message/: __init__.py  admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/progress/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/review/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/user/: admin.py  exceptions.py  models.py  oauth_google_views.py  oauth_kakao_views.py  oauth_mixins.py  oauth_naver_views.py  oauth_views.py  permissions.py  permissions_role.py  responses.py  serializers.py  tests.py  throttles.py  urls.py  validators.py  views.py
apps/user/migrations/: 0001_initial.py  0001_user_role.py  0002_remove_user_name.py  0002_user_email_verification_token_and_more.py  000X_remove_social_fields.py
apps/user/tests/: test_signup_validation.py  test_views.py
apps/work/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
config/: asgi.py  exception_handler.py  routing.py  schema.py  settings.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  prod.py  prod_for_docker.py  settings.py
config/urls/: __init__.py  api.py  urls.py  urls_dev.py  urls_prod.py
resources/: api_mock_and_front_guide.md  api_policy_and_samples.md  frontend_sample.js  postman_collection.json
resources/docker/: Dockerfile  docker-compose-local.yml  docker-compose-prod.yml
resources/nginx/: nginx.conf
resources/scripts/: generate_secret_key.py  run.sh  setup.sh
scripts/: backup.sh  deploy.sh
templates/: naver_test.html  oauth_callback_test.html  oauth_callback_test_old.html
utils/: cache_helpers.py  cache_keys.py  csrf.py  email.py  exceptions.py  jwt_serializers.py  models.py  permissions.py  profanity_filter.py  random_nickname.py  response.py  serializers.py
utils/responses/: common.py  follow.py  idol.py  idol_schedule.py  image.py  user.py  user_schedule.py
