[project]
name = "pr_order"
version = "0.1.0"
description = "Personal Order Management Project"
authors = [
    { name = "hyazzang", email = "pd.hyazzang@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django>=5.2,<6.0",
    "djangorestframework>=3.16.0,<4.0.0",
    "djangorestframework-simplejwt>=5.5.0,<6.0.0",
    "certifi>=2025.1.31,<2026.0.0",
    "django-storages>=1.14.6,<2.0.0",
    "boto3>=1.37.38,<2.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "django-filter>=25.1,<26.0",
    "django-cors-headers>=4.7.0,<5.0.0",
    "drf-yasg>=1.21.10,<2.0.0",
    "pillow>=11.2.1,<12.0.0",
    "requests>=2.32.3,<3.0.0",
    "cloudinary>=1.44.0,<2.0.0",
    "django-cloudinary-storage==0.3.0",
    "charset-normalizer>=3.4.2,<4.0.0",
    "reportlab>=4.4.1,<5.0.0; python_version >= '3.12' and python_version < '4.0'",
    "django-redis>=6.0.0,<7.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "isort>=5.10.1",
    "ruff>=0.11.7",
    "pre-commit>=3.7.0",
    "django-debug-toolbar>=4.3.0",
    "factory-boy>=3.3.0",
    "faker>=24.1.0",
    "coverage>=7.4.4",
    "safety>=2.3.5",
    "bandit>=1.7.9",
    "types-reportlab>=4.4.1.20250602"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_optional = false
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]
disable_error_code = [
    "attr-defined",
    "union-attr",
    "index",
    "misc",
    "assignment",
    "arg-type"
]

[[tool.mypy.overrides]]
module = [
    "cloudinary.*",
    "drf_yasg.*",
    "django_filters.*",
    "reportlab.*",
    "pytest.*",
    "locust.*",
    "django.*",
    "rest_framework.*",
    "apps.*.tests.*",
    "apps.*.models.*",
    "apps.*.views.*",
    "apps.*.serializers.*",
    "config.settings.*",
    "config.urls.*",
    "utils.*"
]
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
strict_optional = false

[tool.django-stubs]
django_settings_module = "config.settings.settings"
strict_settings = true

[tool.pytest.ini_options]
testpaths = ["apps"]
DJANGO_SETTINGS_MODULE = "config.settings.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=apps --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.bandit]
exclude_dirs = ["tests/"]
skips = [
    "B101",
    "B105",
    "B106",
    "B107",
    "B311",
    "B404",
    "B603",
    "B607",
]
